added background lake, back ActionBar

--- a/Crewd/src/main/AndroidManifest.xml
+++ b/Crewd/src/main/AndroidManifest.xml
@@ -22,7 +22,12 @@
             android:name="co.getcrewd.crewd.FullscreenActivity2"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fullscreen_activity2"
-            android:theme="@style/FullscreenTheme" >
+            android:theme="@style/Theme.AppCompat"
+            android:parentActivityName="co.getcrewd.crewd.FullscreenActivity" >
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="co.getcrewd.crewd.FullscreenActivity" />
         </activity>
     </application>
 
